--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,3 +95,34 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.border-l-first-visible {
+  border-left: 1px solid #666666;
+}
+
+.border-l {
+  border-left: 1px solid #666666 !important;
+}
+
+.nav {
+  margin: 0 -10px;
+  padding: 0 10px;
+  list-style: none;
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.nav > li > a {
+  padding: 14px 16px;
+  display: block;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.nav > li > a.active {
+  border-bottom: 2px solid #e64a19;
+}
