--- a/styles/main.scss
+++ b/styles/main.scss
@@ -126,3 +126,17 @@
 .nav > li > a.active {
   border-bottom: 2px solid #e64a19;
 }
+.catI {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+}
+
+.iteB {
+  position: relative;
+  overflow: hidden;
+  width: calc(25vw - 12.5px);
+  height: calc(calc(25vw - 12.5px) + calc(25vw - 12.5px) / 4);
+}
