--- a/styles/main.scss
+++ b/styles/main.scss
@@ -120,7 +120,7 @@
   color: black;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 0.75rem;
 }
 
 .nav > li > a.active {
