--- a/styles/main.scss
+++ b/styles/main.scss
@@ -115,7 +115,7 @@
 }
 
 .nav > li > a {
-  padding: 14px 16px;
+  padding: 10px 16px;
   display: block;
   color: black;
   text-decoration: none;
@@ -139,4 +139,29 @@
   overflow: hidden;
   width: calc(25vw - 12.5px);
   height: calc(calc(25vw - 12.5px) + calc(25vw - 12.5px) / 4);
+}
+.trip h1 {
+  font-size: 100px;
+  position: relative;
+  color: black;
+  font-weight: bolder;
+}
+
+.trip h1::after {
+  content: "BLATTCLUB";
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: rgb(129, 251, 58);
+  left: 2px;
+  mix-blend-mode: multiply;
+}
+.trip h1::before {
+  content: "BLATTCLUB";
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: rgba(255, 0, 0, 0.685);
+  left: -2px;
+  mix-blend-mode: multiply;
 }
